feat: multiple date support
