# src/main/kotlin/com/gmail/marcosav2010/mfp/api/mapper/FoodMapper.kt
@@ -1,7 +1,8 @@
 package com.gmail.marcosav2010.mfp.api.mapper
 
 import com.gmail.marcosav2010.mfp.api.dto.DayMealDTO
-import com.gmail.marcosav2010.mfp.api.dto.FoodDayResponse
+import com.gmail.marcosav2010.mfp.api.dto.FoodDayDTO
+import com.gmail.marcosav2010.mfp.api.dto.FoodDaysResponse
 import com.gmail.marcosav2010.mfp.domain.model.Day
 import com.gmail.marcosav2010.mfp.domain.model.MealFood
 import org.mapstruct.Mapper
@@ -13,5 +14,7 @@ interface FoodMapper {
     @Mapping(target = "name", source = "meal.name")
     fun toDto(source: MealFood): DayMealDTO
 
-    fun toResponse(source: Day): FoodDayResponse
+    fun toDto(source: Day): FoodDayDTO
 }
+
+fun FoodMapper.toResponse(source: List<Day>) = FoodDaysResponse(source.map { toDto(it) })
